# Serenya-Bot

./: .gitignore  Cargo.toml  README.md  build-pgo.ps1  build-pgo.sh  config.example.yml  track_perf.ps1
.github/workflows/: ci.yml
crates/rusty-ytdl/: Cargo.toml  README.md
crates/rusty-ytdl/src/: info.rs  lib.rs  structs.rs  utils.rs
crates/rusty-ytdl/src/stream/: remote_data.rs
crates/rusty-ytdl/tests/: download_with_chunks.rs
crates/youtube_resolver/: Cargo.toml
crates/youtube_resolver/src/: clients.rs  format_selector.rs  innertube.rs  lib.rs  resolver_api.rs  rusty_resolver.rs  session.rs  stream_probe.rs  types.rs
crates/youtube_resolver/src/js_solver/: cache.rs  extract.rs  mod.rs  runtime.rs
src/: installer.rs  main.rs
src/audio/: events.rs  mod.rs  providers.rs  ranking.rs  resolver.rs  runtime.rs  source.rs
src/commands/: audio.rs  cleanup.rs  control.rs  info.rs  invite.rs  media.rs  meta.rs  mod.rs  playback.rs  playlist.rs  queue.rs  settings.rs  stats.rs  voice.rs
src/commands/playlist/: add.rs  create.rs  manage.rs  play.rs
src/config/: mod.rs
src/core/: guild_player.rs  queue.rs  track.rs
src/database/: mod.rs  models.rs
src/discord/: checks.rs  embeds.rs  mod.rs  pagination.rs
src/logging/: redact.rs  webhook.rs
src/src/: installer.rs  main.rs
src/src/audio/: events.rs  providers.rs  quality.rs  ranking.rs  resolver.rs  runtime.rs  source.rs
src/src/commands/: control.rs  info.rs  invite.rs  loop_cmd.rs  media.rs  meta.rs  mod.rs  playback.rs  queue.rs  settings.rs  stats.rs  voice.rs
src/src/commands/playlist/: add.rs  create.rs  list.rs  manage.rs  mod.rs  play.rs
src/src/config/: mod.rs
src/src/core/: guild_player.rs  loop_mode.rs  mod.rs  queue.rs  track.rs
src/src/database/: mod.rs  models.rs  tests.rs
src/src/discord/: checks.rs  embeds.rs  pagination.rs
src/src/logging/: mod.rs  redact.rs  webhook.rs
src/src/utils/: error.rs  mod.rs  time.rs
src/utils/: text.rs
