[package]
name = "serenya"
version = "1.0.1"
edition = "2024"
rust-version = "1.96.0"
description = "A multi-guild Discord music bot"

[dependencies]
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = [
    "client", "gateway", "model", "rustls_backend", "cache"
] }
songbird = { version = "0.6", features = ["builtin-queue"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0.27"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "gzip", "brotli"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
tokio-util = "0.7"
async-trait = "0.1"
serde_json = "1"
hmac = "0.12"
sha1 = "0.10"
symphonia = { version = "0.5.2", features = ["aac", "isomp4", "mp3", "mkv", "ogg", "vorbis", "wav"] }
moka = { version = "0.12", features = ["future"] }
rusty_ytdl = "0.7.4"
uuid = "1"
strsim = "0.11"
percent-encoding = "2"
arc-swap = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
