[package]
name = "serenya"
version = "1.1.1"
edition = "2024"
rust-version = "1.96.0"
description = "A multi-guild Discord music bot"

[workspace.dependencies]
reqwest = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
thiserror = { version = "2" }
tracing = { version = "0.1" }
async-trait = { version = "0.1" }
moka = { version = "0.12", features = ["future"] }
sha1 = { version = "0.10" }
boa_engine = { version = "0.21.0" }
url = { version = "2" }
regex = { version = "1" }
rand = { version = "0.9" }
mime = { version = "0.3" }

[dependencies]
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = [
    "client", "gateway", "model", "rustls_backend", "cache", "voice"
] }
songbird = { version = "0.6", features = ["builtin-queue"] }
tokio = { workspace = true }
serde = { workspace = true }
serde-saphyr = "0.0.28"
reqwest = { workspace = true, features = ["rustls", "json", "gzip", "brotli"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
rand = { workspace = true }
tokio-util = "0.7"
async-trait = { workspace = true }
serde_json = { workspace = true }
hmac = "0.12"
sha1 = { workspace = true }
symphonia = { version = "0.5.2", features = ["aac", "isomp4", "mp3", "mkv", "ogg", "vorbis", "wav"] }
moka = { workspace = true }
youtube_resolver = { path = "crates/youtube_resolver" }
uuid = "1"
strsim = "0.11"
percent-encoding = "2"
arc-swap = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
aho-corasick = "1.1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Optimize dependencies in dev mode for much faster startup and run times (e.g. boa_engine)
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    "crates/rusty-ytdl", "crates/youtube_resolver",
]


