[package]
name = "rusty_ytdl"
version = "0.8.1"
authors = ["Mithronn"]
edition = "2021"
description = "A Rust library for Youtube video searcher and downloader"
repository = "https://github.com/Mithronn/rusty-ytdl"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["youtube", "downloader", "ytdl", "youtube-dl", "searcher"]
include = ["src/**/*", "Cargo.toml"]
exclude = ["examples/**/*", "tests/**/*", ".github/**/*"]
categories = ["multimedia::video", "multimedia::audio"]
rust-version = "1.96.0"

[package.metadata.docs.rs]
all-features = true

# Removed workspace block to integrate into main workspace

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = [
    "cookies",
    "gzip",
] }
scraper = "0.25.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = "0.15.0"
regex = { workspace = true }
url = { workspace = true }
urlencoding = "2.1.3"
thiserror = { workspace = true }
derive_more = { version = "2.1.1", features = ["display"] }
derivative = "2.2.0"
once_cell = "1.19.0"
tokio = { workspace = true }
rand = { workspace = true }
reqwest-middleware = { version = "0.5.0", features = ["json", "query"] }
reqwest-retry = "0.9.0"
m3u8-rs = "6.0.0"
async-trait = { workspace = true }
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["std"] }
hex = "0.4.3"
boa_engine = { workspace = true }
mime = { workspace = true }
bytes = "1.7.1"
flame = { version = "0.2.2", optional = true }
flamer = { version = "0.5.0", optional = true }

[dev-dependencies]
tokio = { version = "1.39.2", features = ["full"] }

[features]
default = ["search", "live", "default-tls"]
performance_analysis = ["flame", "flamer"]
live = ["tokio/time", "tokio/process"]
blocking = ["tokio/rt", "tokio/rt-multi-thread"]
search = []
ffmpeg = ["tokio/process", "tokio/io-util"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
socks = ["reqwest/socks"]

[[example]]
name = "multiple_downloads"
path = "examples/multiple_downloads.rs"
required-features = ["performance_analysis"]

[[example]]
name = "blocking"
path = "examples/blocking.rs"
required-features = ["blocking"]

[[example]]
name = "download_with_ffmpeg"
path = "examples/download_with_ffmpeg.rs"
required-features = ["ffmpeg"]

[[example]]
name = "search"
path = "examples/search.rs"
required-features = ["search"]

[[example]]
name = "suggestion"
path = "examples/suggestion.rs"
required-features = ["search"]
