[package]
name = "youtube_resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
rusty_ytdl = { path = "../rusty-ytdl", default-features = false, features = ["search", "live", "rustls"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "gzip", "brotli", "cookies"] }

async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mime = "0.3"


