[package]
name = "youtube_resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
rusty_ytdl = { path = "../rusty-ytdl", default-features = false, features = ["rustls"] }
reqwest = { workspace = true, features = ["rustls", "json", "gzip", "brotli"] }

async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
mime = { workspace = true }
moka = { workspace = true }
sha1 = { workspace = true }
boa_engine = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
